@@ -116,6 +116,12 @@ void CanvasScene::setZoom(qreal zoom)
 {
 	if(zoom != m_zoom) {
 		m_zoom = zoom;
+		if(m_pathPreview) {
+			m_pathPreview->setZoom(zoom);
+		}
+		if(m_selection) {
+			m_selection->setZoom(zoom);
+		}
 		if(m_transform) {
 			m_transform->setZoom(zoom);
 		}
@@ -304,7 +310,7 @@ void CanvasScene::setPathPreview(const QPainterPath &path)
 	} else if(m_pathPreview) {
 		m_pathPreview->setPath(path);
 	} else {
-		m_pathPreview = new PathPreviewItem(path, m_canvasGroup);
+		m_pathPreview = new PathPreviewItem(path, m_zoom, m_canvasGroup);
 		m_pathPreview->setUpdateSceneOnRefresh(true);
 	}
 }
@@ -625,7 +631,7 @@ void CanvasScene::setSelection(
 	if(valid) {
 		if(!m_selection) {
 			m_selection = new SelectionItem(
-				m_selectionIgnored, m_showSelectionMask, m_canvasGroup);
+				m_selectionIgnored, m_showSelectionMask, m_zoom, m_canvasGroup);
 			m_selection->setUpdateSceneOnRefresh(true);
 		}
 		m_selection->setModel(bounds, mask);
