@@ -1,4 +1,5 @@
 Unreleased Version 2.2.2-pre
+ * Fix: Solve rendering glitches with selection outlines that happen on some systems. Thanks xxxx for reporting.
 
 2024-08-09 Version 2.2.2-beta.3
  * Fix: Use more accurate timers for performance profiles if the platform supports it.
